<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lab2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="50px"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#f7f5e7"
    tools:context="net.mosur.tomasz.lab2.lab2.Lab2"
    android:focusableInTouchMode="true" >


    <TextView
        android:text="@string/welcome_msg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="40sp"
        android:textColor="@android:color/holo_green_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_msg"/>

    <Switch
        android:layout_marginTop="20dp"
        android:text="@string/unit_kg"
        android:switchPadding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_msg"
        android:id="@+id/unit_switch" />

    <TextView
    android:text="@string/input_weight"
    android:layout_below="@id/unit_switch"
    android:textSize="20sp"
        android:layout_marginTop="30dp"
    android:layout_alignParentLeft="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/input_weight_label"/>

    <EditText
        android:id="@+id/input_weight_box"
        android:paddingTop="30dp"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/unit_switch"
        android:layout_alignParentRight="true"/>

    <TextView
        android:text="@string/input_height"
        android:layout_below="@id/input_weight_label"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input_height_label"/>
    <EditText
        android:id="@+id/input_height_box"
        android:paddingTop="30dp"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_weight_label"
        android:layout_alignParentRight="true"/>
    <Button
        android:id="@+id/bmi_calc_button"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/calculate_bmi"
        android:layout_below="@id/input_height_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:textColor="@android:color/black"
        android:id="@+id/bmi_result_msg"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:text=""
        android:layout_below="@id/bmi_calc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text=""
        android:id="@+id/bmi_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bmi_result_msg"
        android:layout_centerHorizontal="true"
        android:textSize="40sp" />



</RelativeLayout>

</ScrollView>